Add prettier styling to page elements

--- a/carousel.html
+++ b/carousel.html
@@ -28,6 +28,7 @@
 				</tr>
 			</table>
 		</div>
+		<div id="stage-shadow"></div>
 		<div id="leftarrow" class="arrow">
 			<div id="left-triangle"></div>
 		</div>
