Add highlight to quick-nav to show currently selected image

--- a/carousel.html
+++ b/carousel.html
@@ -38,7 +38,7 @@
 	</div>
 	<div class="centering-wrapper">
 		<div id="quick-jump">
-			<div id="button1" class="quick-button"></div>
+			<div id="button1" class="quick-button selected-button"></div>
 			<div id="button2" class="quick-button"></div>
 			<div id="button3" class="quick-button"></div>
 			<div id="button4" class="quick-button"></div>
