Refactored navigation logic to promote DRYness

--- a/carousel.html
+++ b/carousel.html
@@ -38,11 +38,11 @@
 	</div>
 	<div class="centering-wrapper">
 		<div id="quick-jump">
-			<div id="button1" class="quick-button selected-button"></div>
-			<div id="button2" class="quick-button"></div>
-			<div id="button3" class="quick-button"></div>
-			<div id="button4" class="quick-button"></div>
-			<div id="button5" class="quick-button"></div>
+			<div id="button1" data-index="1" data-position="0px" class="quick-button selected-button"></div>
+			<div id="button2" data-index="2" data-position="-400px" class="quick-button"></div>
+			<div id="button3" data-index="3" data-position="-800px" class="quick-button"></div>
+			<div id="button4" data-index="4" data-position="-1200px" class="quick-button"></div>
+			<div id="button5" data-index="5" data-position="-1600px" class="quick-button"></div>
 		</div>
 	</div>
 </div>
