Build logic to fade in/out previews (still needs actual photos)

--- a/carousel.html
+++ b/carousel.html
@@ -32,9 +32,11 @@
 		<div id="leftarrow" class="arrow">
 			<div id="left-triangle"></div>
 		</div>
+		<div id="leftpreview" class="preview"></div>
 		<div id="rightarrow" class="arrow">
 			<div id="right-triangle"></div>
 		</div>
+		<div id="rightpreview" class="preview"></div>
 	</div>
 	<div class="centering-wrapper">
 		<div id="quick-jump">
